--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script src="draw.js"></script>
+    <script src="draw.js" defer></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
